ngubah typo di index

--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
     </section>
   </main>
 
-  <script src="./js/script.js"></script>
+  <script src="./JS/scrip.js"></script>
 </body>
 </html>
